--- a/src/app/nw3/nw3.component.scss
+++ b/src/app/nw3/nw3.component.scss
@@ -252,12 +252,12 @@
             top: 4px !important;
             left: 4px;
             color: white;
-            background-color: green;
+            background-color: #01bfa5;
         }
     }
 
     .voteIconButtonGreen {
-        color: green;
+        color: #01bfa5;
         outline: none;
         width: 30px;
         height: 30px;
@@ -269,7 +269,7 @@
             top: 4px !important;
             left: 4px;
             color: white;
-            background-color: green;
+            background-color: #01bfa5;
         }
     }
 
@@ -279,12 +279,12 @@
             top: 4px !important;
             left: 4px;
             color: black;
-            background-color: #ffad37;
+            background-color: #ffdf00;
         }
     }
 
     .voteIconButtonYellow {
-        color: #ffad37;
+        color: #ffdf00;
         outline: none;
         width: 30px;
         height: 30px;
@@ -296,7 +296,7 @@
             top: 4px !important;
             left: 4px;
             color: black;
-            background-color: #ffad37;
+            background-color: #ffdf00;
         }
     }
     .voteIconButton3 {
@@ -305,11 +305,11 @@
             top: 4px !important;
             left: 4px;
             color: white;
-            background-color: red;
+            background-color: #fe0265;
         }
     }
-    .voteIconButtonRed {
-        color: red;
+    .voteIconButton#fe0265 {
+        color: #fe0265;
         outline: none;
         width: 30px;
         height: 30px;
@@ -320,7 +320,7 @@
             top: 4px !important;
             left: 4px;
             color: white;
-            background-color: red;
+            background-color: #fe0265;
         }
     }
 
@@ -330,11 +330,11 @@
             top: 4px !important;
             left: 4px;
             color: white;
-            background-color: purple;
+            background-color: #0336ff;
         }
     }
     .voteIconButtonPurple {
-        color: violet;
+        color: #0336ff;
         outline: none;
         width: 30px;
         height: 30px;
@@ -345,7 +345,7 @@
             top: 4px !important;
             left: 4px;
             color: white;
-            background-color: purple;
+            background-color: #0336ff;
         }
     }
 }
