--- a/src/app/nw3/nw3.component.scss
+++ b/src/app/nw3/nw3.component.scss
@@ -862,11 +862,19 @@ $voteIconsColor: #008d05, #f2ce00, #f50c0c, #4c00ff, #4c00ff;
         padding: 4px 0px 0px 83px;
         /* width: 300px; */
 
-        .voteIconRank {
-            text-shadow: 0 0.04em 0.04em rgba(0, 0, 0, 0.35);
-            font-size: 40px;
-            // box-shadow: inset inset 0px 0px 5px #c1c1c1;
-            // @include BoxShadow(6);
+        .rankingBox {
+            .voteIconRank {
+                text-shadow: 0 0.04em 0.04em rgba(0, 0, 0, 0.35);
+                font-size: 40px;
+            }
+
+            @for $i from 1 through 8 {
+                &:nth-of-type(#{100}n + #{$i}) .voteIconRank {
+                    animation: heartBeat 0.5s ease-in-out normal;
+                    animation-iteration-count: 1;
+                    animation-delay: $i * 0.05 + s;
+                }
+            }
         }
 
         .groupNameItemContainer:hover {
@@ -960,7 +968,6 @@ $voteIconsColor: #008d05, #f2ce00, #f50c0c, #4c00ff, #4c00ff;
     display: none;
 }
 
-
 .qr_code {
     position: absolute;
     top: 50%;
@@ -971,16 +978,16 @@ $voteIconsColor: #008d05, #f2ce00, #f50c0c, #4c00ff, #4c00ff;
     display: flex;
     flex-direction: column;
     align-items: center;
-    z-index: 1;   
-    background-color: white;;
+    z-index: 1;
+    background-color: white;
     @include BoxShadow(16);
-  }
+}
 
-  .info{
-      .img{
-          width: 200px;
-      }
-  }
+.info {
+    .img {
+        width: 200px;
+    }
+}
 
 // .example-card {
 //     width: 400px;
