code clean and local storage settings persitance done

--- a/src/app/nw3/nw3.component.html
+++ b/src/app/nw3/nw3.component.html
@@ -343,7 +343,7 @@
                             <div class="groupNameIetmRationale" (mouseleave)="selectNameItemIndex = ''"
                                 (click)="selectNameItemIndex = ''" *ngIf="i === selectNameItemIndex"
                                 [style.left]="myleft" [style.top]="mytop"
-                                [innerHTML]="'Future Rationale Future Rationale Future RationaleFuture RationaleFuture RationaleFuture Rationale'">
+                                [innerHTML]="separateName.NameRationale">
                             </div>
                         </div>
                     </div>
