summary coding and bug correction in progress

--- a/src/app/nw3/nw3.component.html
+++ b/src/app/nw3/nw3.component.html
@@ -83,19 +83,21 @@
 
             <div class="summaryButtons">
                 <div style="display: flex; flex-direction: row; justify-content: space-between;align-items: center">
-                    <button (click)="changeSummaryList('positive')" mat-raised-button
+                    <button (click)="getSelectedRank('positive'); changeSummaryList('positive')" mat-raised-button
                         style="margin-right: 5px;background-color: white;">Positive</button>
-                    <button (click)="changeSummaryList('neutral')" mat-raised-button
+
+                    <button (click)="getSelectedRank('neutral'); changeSummaryList('neutral')" mat-raised-button
                         style="margin-right: 5px; background-color: white;" color="primary">Neutral</button>
-                    <button (click)="changeSummaryList('negative')" mat-raised-button
+
+                    <button (click)="getSelectedRank('negative'); changeSummaryList('negative')" mat-raised-button
                         style="margin-right: 5px; background-color: white;">Negative</button>
 
                 </div>
                 <div style="display: flex; flex-direction: row; justify-content: space-between;align-items: center">
-                    <button (click)="changeSummaryList('new names')" mat-raised-button
+                    <button (click)="getSelectedRank('New'); changeSummaryList('new names')"mat-raised-button
                         style="margin-right: 5px;background-color: white;color:black">New
                         Names</button>
-                    <button (click)="changeSummaryList('chart')" mat-mini-fab
+                    <button (click)="getSelectedRank('chart'); changeSummaryList('chart')"mat-mini-fab
                         style="margin-right: 5px;background-color: white;color:black;outline: none;">
                         <mat-icon>leaderboard</mat-icon>
                     </button>
@@ -106,26 +108,53 @@
 
                 <div *ngIf="summaryPositive" class="summaryPostives" style="">
                     <div class="summaryListDisplay" style="background-color: green; color: white;">
-                        <div *ngFor="let item of totalPositive">{{item}}</div>
-                        <!-- <div *ngFor="let item of fonts">{{item}}</div> -->
+                        <div *ngFor="let name of nameCandidates ; let i = index">
+                             <div style="font-size: xx-large;" [matTooltip]="name.NewNames"
+                                [matTooltipClass]="'bi-tooltip-style'" matTooltipPosition="right"
+                                 [innerHTML]="nameCandidates[i].NameToDisplay.split('(')[0]">
+                                </div>
+                            <div style="font-size: 20px !important; padding-left: 5px; padding-top: 8px ">
+                                {{nameCandidates[i].NameToDisplay.replace('(', '|(').split('|')[1]}}</div>
+                        </div>                       
                     </div>
                 </div>
                 <div *ngIf="summaryNeutral" class="summaryPostives">
                     <div class="summaryListDisplay" style="background-color: orange; color: white;">
-                        <div *ngFor="let item of totalNeutral">{{item}}</div>
-                        <!-- <div *ngFor="let item of fonts">{{item}}</div> -->
+                        <div *ngFor="let name of nameCandidates ; let i = index">
+                             <div style="font-size: xx-large;" [matTooltip]="name.NewNames"
+                                [matTooltipClass]="'bi-tooltip-style'" matTooltipPosition="right"
+                                 [innerHTML]="nameCandidates[i].NameToDisplay.split('(')[0]">
+                                </div>
+                            <div style="font-size: 20px !important; padding-left: 5px; padding-top: 8px ">
+                                {{nameCandidates[i].NameToDisplay.replace('(', '|(').split('|')[1]}}</div>
+                        </div>
+                       
                     </div>
                 </div>
                 <div *ngIf="summaryNegative" class="summaryNegative">
                     <div class="summaryListDisplay" style="background-color: red; color: white;">
-                        <div *ngFor="let item of totalNegative">{{item}}</div>
-                        <!-- <div *ngFor="let item of fonts">{{item}}</div> -->
+                        <div *ngFor="let name of nameCandidates ; let i = index">
+                             <div style="font-size: xx-large;" [matTooltip]="name.NewNames"
+                                [matTooltipClass]="'bi-tooltip-style'" matTooltipPosition="right"
+                                 [innerHTML]="nameCandidates[i].NameToDisplay.split('(')[0]">
+                                </div>
+                            <div style="font-size: 20px !important; padding-left: 5px; padding-top: 8px ">
+                                {{nameCandidates[i].NameToDisplay.replace('(', '|(').split('|')[1]}}</div>
+                        </div>
+                       
                     </div>
                 </div>
                 <div *ngIf="summaryNewNames" class="summaryNew_names">
                     <div class="summaryListDisplay" style="background-color: purple; color: white;">
-                        <div *ngFor="let item of totalNewNames">{{item.NameToDisplay}}</div>
-                        <!-- <div *ngFor="let item of fonts">{{item}}</div> -->
+                        <div *ngFor="let name of nameCandidates ; let i = index">
+                             <div style="font-size: xx-large;" [matTooltip]="name.NewNames"
+                                [matTooltipClass]="'bi-tooltip-style'" matTooltipPosition="right"
+                                 [innerHTML]="nameCandidates[i].NameToDisplay.split('(')[0]">
+                                </div>
+                            <div style="font-size: 20px !important; padding-left: 5px; padding-top: 8px ">
+                                {{nameCandidates[i].NameToDisplay.replace('(', '|(').split('|')[1]}}</div>
+                        </div>
+                       
                     </div>
                 </div>
             </div>
@@ -159,7 +188,7 @@
             <div class="singleNameSlide">
 
                 <div class="nameContainer">
-                    <div [style.font-family]="font1" [style.font-size]="'30px'" class="item1">{{category}}</div>
+                    <div [style.font-family]="font1" [style.font-size]="'30px'" class="item1">{{category}}🥰</div>
                     <div class="testName" [style.font-family]="font2" Comirnaty
                         [style.font-size]="(font2==='coture')?'117px':'190px'" [innerHTML]="testName">
 
@@ -226,12 +255,12 @@
                         <div (mouseenter)="displayOverviewBox('negativeBox')">
                             <button *ngIf="negativeChecked" [matBadge]="NegativeUsersVote" class="voteIconButtonRed"
                                 (click)="selectedOpt('Negative');" mat-icon-button>
-                                <mat-icon>sentiment_very_dissatisfied</mat-icon>
+                                <mat-icon>sentiment_very_dissatisfied</mat-icon>👎
                             </button>
                             <button *ngIf="!negativeChecked" [matBadge]="NegativeUsersVote"
                                 class="voteIconButton voteIconButton3" (click)="selectedOpt('Negative');"
                                 mat-icon-button>
-                                <mat-icon>sentiment_very_dissatisfied</mat-icon>
+                                <mat-icon>sentiment_very_dissatisfied</mat-icon>👎
                             </button>
                         </div>
                     </div>
@@ -250,11 +279,11 @@
                         </button>
                         <div (mouseenter)="displayOverviewBox('allUsersBox')">
                             <button *ngIf="recraftChecked" [matBadge]="allVoters" class="voteIconButtonPurple"
-                                (click)="selectedOpt('recraft');" mat-icon-button>
+                                (click)="recraft();" mat-icon-button>
                                 <mat-icon>sync</mat-icon>
                             </button>
                             <button *ngIf="!recraftChecked" [matBadge]="allVoters"
-                                class="voteIconButton voteIconButton4" (click)="selectedOpt('recraft');"
+                                class="voteIconButton voteIconButton4" (click)="recraft();"
                                 mat-icon-button>
                                 <mat-icon>sync</mat-icon>
                             </button>
@@ -343,7 +372,7 @@
                             <div class="groupNameIetmRationale" (mouseleave)="selectNameItemIndex = ''"
                                 (click)="selectNameItemIndex = ''" *ngIf="i === selectNameItemIndex"
                                 [style.left]="myleft" [style.top]="mytop"
-                                [innerHTML]="separateName.NameRationale">
+                                [innerHTML]="groupRationale[i]">
                             </div>
                         </div>
                     </div>
