--- a/src/app/nw3/nw3.component.scss
+++ b/src/app/nw3/nw3.component.scss
@@ -263,6 +263,7 @@
         height: 30px;
         line-height: 20px;
         @include BoxShadow(6);
+        transform: scale(1.2);
 
         .mat-badge-content {
             position: absolute;
@@ -290,7 +291,7 @@
         height: 30px;
         line-height: 20px;
         @include BoxShadow(6);
-
+        transform: scale(1.2);
         .mat-badge-content {
             position: absolute;
             top: 4px !important;
@@ -308,13 +309,14 @@
             background-color: #fe0265;
         }
     }
-    .voteIconButton#fe0265 {
+    .voteIconButtonRed {
         color: #fe0265;
         outline: none;
         width: 30px;
         height: 30px;
         line-height: 20px;
         @include BoxShadow(6);
+        transform: scale(1.2);
         .mat-badge-content {
             position: absolute;
             top: 4px !important;
@@ -334,12 +336,13 @@
         }
     }
     .voteIconButtonPurple {
-        color: #0336ff;
+        color: purple;
         outline: none;
         width: 30px;
         height: 30px;
         line-height: 20px;
         @include BoxShadow(6);
+        transform: scale(1.2);
         .mat-badge-content {
             position: absolute;
             top: 4px !important;
@@ -356,10 +359,11 @@
     width: 30px;
     height: 30px;
     line-height: 20px;
+    transform: scale(1.2);
 }
 
 .voteIconButtonGreen:hover {
-    color: green;
+    // color: green;
     transition: all 2ms ease-in-out;
     position: relative;
     top: -2px;
@@ -377,6 +381,55 @@
 //     width: 633px;
 //     outline: none;
 // }
+
+
+$voteIconsColor: #008d05, #f2ce00, #f50c0c, #4c00ff, #4c00ff;
+@for $i from 1 through 5 {
+    .voteIconButton:nth-child(#{$i}) {
+        // color: nth($voteIconsColor, $i);
+        animation: fadeIn 0.2s ease-in-out backwards;
+        animation-iteration-count: 1;
+        animation-delay: $i * 0.15 + s;
+        @include BoxShadow(6);
+    }
+
+    .voteIconButton:hover:nth-child(#{$i}) {
+        // color: nth($voteIconsColor, $i);
+        transition: all 2ms ease-in-out;
+        position: relative;
+        top: -2px;
+        transform: scale(2);
+        background: white;
+    }
+
+    .voteOverviewBox:nth-child(#{$i}) {
+        // color: nth($voteIconsColor, $i);
+        animation: fadeIn 0.2s ease-in-out backwards;
+        animation-iteration-count: 1;
+        animation-delay: $i * 0.15 + s;
+    }
+
+    .GG:nth-child(#{$i}) {
+        // color: nth($voteIconsColor, $i);
+        animation: fadeIn 0.2s ease-in-out backwards;
+        animation-iteration-count: 1;
+        animation-delay: $i * 0.15 + s;
+        text-shadow: 0 0.04em 0.04em rgba(0, 0, 0, 0.35);
+        box-shadow: inset inset 0px 0px 5px #c1c1c1;
+    }
+
+    .GGOut:nth-child(#{$i}) {
+        animation: fadeOut 0.2s ease-in-out backwards;
+        animation-iteration-count: 1;
+        animation-delay: $i * 0.15 + s;
+    }
+
+    .GG:hover:nth-child(#{$i}) {
+        transform: scale(1.2);
+        background: white;
+    }
+}
+
 
 .voteOverviewBox {
     border: blue 1px solid;
@@ -642,52 +695,6 @@
     }
 }
 
-$voteIconsColor: #008d05, #f2ce00, #f50c0c, #4c00ff, #4c00ff;
-@for $i from 1 through 5 {
-    .voteIconButton:nth-child(#{$i}) {
-        // color: nth($voteIconsColor, $i);
-        animation: fadeIn 0.2s ease-in-out backwards;
-        animation-iteration-count: 1;
-        animation-delay: $i * 0.15 + s;
-        @include BoxShadow(6);
-    }
-
-    .voteIconButton:hover:nth-child(#{$i}) {
-        color: nth($voteIconsColor, $i);
-        transition: all 2ms ease-in-out;
-        position: relative;
-        top: -2px;
-        transform: scale(1.2);
-        background: white;
-    }
-
-    .voteOverviewBox:nth-child(#{$i}) {
-        // color: nth($voteIconsColor, $i);
-        animation: fadeIn 0.2s ease-in-out backwards;
-        animation-iteration-count: 1;
-        animation-delay: $i * 0.15 + s;
-    }
-
-    .GG:nth-child(#{$i}) {
-        // color: nth($voteIconsColor, $i);
-        animation: fadeIn 0.2s ease-in-out backwards;
-        animation-iteration-count: 1;
-        animation-delay: $i * 0.15 + s;
-        text-shadow: 0 0.04em 0.04em rgba(0, 0, 0, 0.35);
-        box-shadow: inset inset 0px 0px 5px #c1c1c1;
-    }
-
-    .GGOut:nth-child(#{$i}) {
-        animation: fadeOut 0.2s ease-in-out backwards;
-        animation-iteration-count: 1;
-        animation-delay: $i * 0.15 + s;
-    }
-
-    .GG:hover:nth-child(#{$i}) {
-        transform: scale(1.2);
-        background: white;
-    }
-}
 
 .goButton {
     border-radius: 11px;
